# texteditor

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: external.cmake
data/: circle.py  lorem.txt  lorem2.txt  test.cpp
shaders/: lib.glsl  passthrough.glsl  selection.glsl  selectionVertex.glsl  text.glsl  textVertex.glsl  vertex.glsl
src/: framebuffer.cpp  glhelpers.h  helpers.cpp  helpers.h  inputmanager.cpp  inputmanager.h  main.cpp  renderstyle.cpp  renderstyle.h  renderviewport.cpp  renderviewport.h  shadercompiler.cpp  text.cpp  text.h  textformatter.cpp  textformatter.h  textrender.cpp  textrender.h  texturerender.h  textview.cpp  textview.h  windowstate.cpp  windowstate.h
src/interface/: inputmanager.cpp  inputmanager.h  textoperations.cpp  textoperations.h  textview.cpp  textview.h
src/rendering/: font.cpp  font.h  framebuffer.h  glhelpers.cpp  glhelpers.h  renderstyle.cpp  renderstyle.h  shadercompiler.cpp  textmetrics.cpp  textmetrics.h  textrender.cpp  textrender.h  textselectionrender.cpp  textselectionrender.h  texturerender.cpp  textview.cpp  textview.h
src/rendering/common/: shadercompiler.cpp  shadercompiler.h  shaderprogram.cpp  shaderprogram.h
src/text/: formattedtext.cpp  formattedtext.h  formatterrules.h  helpers.cpp  helpers.h  incrementalformattedtext.cpp  incrementalformattedtext.h  text.cpp  text.h  textformatter.cpp  textformatter.h  textloader.cpp  textloader.h
src/text/formatters/: cpp.cpp  cpp.h  cppformatter.cpp  cppformatter.h  python.cpp  python.h  pythonformatter.cpp  pythonformatter.h  text.cpp  text.h
